@@ -31,6 +31,7 @@
 	- fix: initialize file verify flags for %doc (#235353).
 	- solaris: add #ifdef _sun so librpmio needn't export glob/globfree.
 	- fix: --verify displays mis-leading dependency checks (#223642).
+	- debugedit: canonicalize_path was broken again (#232222).
 
 4.4.7 -> 4.4.8:
 	- start rpm-4.4.8 development.
